# OptiSMT

./: .gitmodules  CMakeLists.txt  README.md  README_CN.md  build_and_test.sh
examples/: mixed_logic.lp  mixed_logic.mps  mixed_logic.smt2  nonlinear.lp  nonlinear.mps  nonlinear.smt2  simple_linear.lp  simple_linear.mps  simple_linear.smt2
examples/error/: cut_lemma_01_001.smt2  output(无精度损失，feasible).lp  output(精度损失，feasible).lp  output(精度损失，infeasible).lp  solution(无精度损失，feasible).txt  solution(精度损失，feasible).txt  solution(精度损失，infeasible).txt
src/: common.h  main.cpp  optismt.cpp  optismt.h  smt_transformer.cpp  smt_transformer.h
src/optimization/: gurobi_backend.cpp  gurobi_backend.h  optimization_backend.h
src/theory/: theory_solver.cpp  theory_solver.h
src/theory/bv/: bv.cpp  bv.h
src/theory/fp/: fp.cpp  fp.h
src/theory/la/: la.cpp  la.h
src/theory/na/: na.cpp  na.h
src/transformation/: smt_to_opt_transformer.cpp  smt_to_opt_transformer.h
